--- a/frameworks/digital-outcomes-and-specialists-5/questions/declaration/civilServiceValues.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/declaration/civilServiceValues.yml
@@ -1,6 +1,6 @@
 name: Civil Service values
 question: >
-  Do you agree to support the <a href="https://www.gov.uk/government/publications/civil-service-code/the-civil-service-code" target="_blank" rel="noopener noreferrer">Civil Service values (opens in new tab)</a> and if asked, provide evidence of how you do so?
+  Do you agree to support the <a class="govuk-link" href="https://www.gov.uk/government/publications/civil-service-code/the-civil-service-code" target="_blank" rel="noopener noreferrer">Civil Service values (opens in new tab)</a> and if asked, provide evidence of how you do so?
 type: boolean
 assessment:
   passIfIn:
