--- a/frameworks/digital-outcomes-and-specialists-5/questions/declaration/environmentalSocialLabourLaw.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/declaration/environmentalSocialLabourLaw.yml
@@ -1,6 +1,6 @@
 name: Violations of environmental, social or labour law
 question: >
-  In the last 3 years, has your organisation (or a parent or partner organisation) violated your obilgations according to <a href="http://www.legislation.gov.uk/uksi/2015/102/part/2/chapter/2/crossheading/conduct-of-the-procedure-choice-of-participants-and-award-of-contracts/made" target="_blank" rel="noopener noreferrer">Regulation 56(2) of the Public Contracts Regulations 2015 (opens in new tab)</a> in any of these areas:
+  In the last 3 years, has your organisation (or a parent or partner organisation) violated your obilgations according to <a class="govuk-link" href="http://www.legislation.gov.uk/uksi/2015/102/part/2/chapter/2/crossheading/conduct-of-the-procedure-choice-of-participants-and-award-of-contracts/made" target="_blank" rel="noopener noreferrer">Regulation 56(2) of the Public Contracts Regulations 2015 (opens in new tab)</a> in any of these areas:
 
     - environmental law
     - social law
@@ -9,7 +9,7 @@ question: >
 hint:
   For example, if any finding of unlawful discrimination has been made against the organisation by an Employment Tribunal or Employment Appeal Tribunal.
   
-  Read more about <a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/551130/List_of_Mandatory_and_Discretionary_Exclusions.pdf" target="_blank" rel="noopener noreferrer">your obligations in the field of environment, social and labour law (opens in new tab)</a>
+  Read more about <a class="govuk-link" href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/551130/List_of_Mandatory_and_Discretionary_Exclusions.pdf" target="_blank" rel="noopener noreferrer">your obligations in the field of environment, social and labour law (opens in new tab)</a>
 
 type: boolean
 assessment:
