--- a/frameworks/digital-outcomes-and-specialists-5/questions/declaration/publishContracts.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/declaration/publishContracts.yml
@@ -1,6 +1,6 @@
 name: Publishing contracts
 question: >
-  Are you prepared to <a href="https://www.gov.uk/government/publications/procurement-policy-note-0117-update-to-transparency-principles" target="_blank" rel="noopener noreferrer">publish contracts according to government policy (opens in new tab)</a>?
+  Are you prepared to <a class="govuk-link" href="https://www.gov.uk/government/publications/procurement-policy-note-0117-update-to-transparency-principles" target="_blank" rel="noopener noreferrer">publish contracts according to government policy (opens in new tab)</a>?
 type: boolean
 assessment:
   passIfIn:
