--- a/frameworks/digital-outcomes-and-specialists-5/questions/declaration/termsAndConditions.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/declaration/termsAndConditions.yml
@@ -1,6 +1,6 @@
 name: Terms and conditions
 question: >
-  Do you accept the terms and conditions in the <a href="/suppliers/frameworks/digital-outcomes-and-specialists-5#legal-documents" target="_blank" rel="noopener noreferrer">framework agreement and call-off contract documents (opens in new tab)</a>?
+  Do you accept the terms and conditions in the <a class="govuk-link" href="/suppliers/frameworks/digital-outcomes-and-specialists-5#legal-documents" target="_blank" rel="noopener noreferrer">framework agreement and call-off contract documents (opens in new tab)</a>?
 type: boolean
 assessment:
   passIfIn:
