--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/openStandardsPrinciples.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/openStandardsPrinciples.yml
@@ -1,7 +1,7 @@
 name: Use of open standards
 question: >
-  Will you work according to the government’s <a target="_blank" rel="noopener noreferrer" href="https://www.gov.uk/government/publications/open-standards-principles/open-standards-principles">Open Standards Principles (opens in new tab)</a> and use the
-  <a target="_blank" rel="noopener noreferrer" href="http://standards.data.gov.uk/challenges/adopted">open standards selected for use across government (opens in new tab)</a>?
+  Will you work according to the government’s <a class="govuk-link" target="_blank" rel="noopener noreferrer" href="https://www.gov.uk/government/publications/open-standards-principles/open-standards-principles">Open Standards Principles (opens in new tab)</a> and use the
+  <a class="govuk-link" target="_blank" rel="noopener noreferrer" href="http://standards.data.gov.uk/challenges/adopted">open standards selected for use across government (opens in new tab)</a>?
 hint: This includes publishing any software you build for the government under the appropriate open source licence.
 type: boolean
 required_value: true
