--- a/frameworks/digital-outcomes-and-specialists-5/manifests/declaration.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/manifests/declaration.yml
@@ -175,7 +175,7 @@
   name: Contact details
   slug: contact-details
   editable: True
-  prefill: False
+  prefill: True
   description: |
      The Crown Commercial Service will use the contact information to contact your organisation if it has any questions about your application.
   questions:
