Add tests for frameworks schema scripts to pull request checks
It would be good to know if a change to framework content causes issues
with the schema generation scripts, before merging a pull request.

This commit adds GitHub actions to run the schema generation scripts
against the latest framework iterations.

Currently the latest framework iterations are hardcoded, maybe we can
change this in future to save us from forgetting to update these tests.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,3 +29,38 @@ jobs:
 
       - name: Run tests
         run: make test
+
+  functional_test:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.6]
+        script:
+          - scripts/generate-assessment-schema.py g-cloud-12
+          - scripts/generate-assessment-schema.py digital-outcomes-and-specialists-5
+          - scripts/generate-search-config.py g-cloud-12 services --output-path=/tmp
+          - scripts/generate-search-config.py digital-outcomes-and-specialists-5 briefs --output-path=/tmp
+          - scripts/generate-validation-schemas.py --output-path=/tmp
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Install Ubuntu packages
+        run: sudo apt-get install libxml2-dev libxslt1-dev python-dev
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Setup Python cache
+        uses: actions/cache@v2
+        with:
+          path: venv
+          key: venv-${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('**/requirements-dev.txt') }}
+
+      - name: Install dependencies
+        run: make requirements-dev
+
+      - name: Test script
+        run: venv/bin/python ${{ matrix.script }}
