Add content telling supplier when they can create an account
Let suppliers know when they can create an account.

Co-authored-by: Nora Brodian <nora.brodian@digital.cabinet-office.gov.uk>

--- a/frameworks/digital-outcomes-and-specialists-5/messages/become-a-supplier.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/messages/become-a-supplier.yml
@@ -19,7 +19,7 @@ open: |
   - user research participants
 
 pending: &can_not_apply |
-  Digital Outcomes and Specialists is closed for applications.
+  Digital Outcomes and Specialists is closed for applications. You can create an account when it is open.
 
   You will be able to apply to sell:
 
