--- a/frameworks/g-cloud-12/messages/become-a-supplier.yml
+++ b/frameworks/g-cloud-12/messages/become-a-supplier.yml
@@ -17,7 +17,7 @@ open: |
   - cloud support
 
 pending: &can_not_apply |
-  G-Cloud is closed for applications.
+  G-Cloud is closed for applications. You can create an account when it is open.
 
   You will be able to apply to sell:
 
