Add headings to become a supplier messages
Co-authored-by: Nora Brodian <nora.brodian@digital.cabinet-office.gov.uk>

--- a/frameworks/digital-outcomes-and-specialists-5/messages/become-a-supplier.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/messages/become-a-supplier.yml
@@ -1,4 +1,6 @@
 coming: |
+  ### Digital Outcomes and Specialists
+
   Digital Outcomes and Specialists is opening for applications.
 
   You will be able to apply to sell:
@@ -9,6 +11,8 @@ coming: |
   - user research participants
 
 open: |
+  ### Digital Outcomes and Specialists
+
   Digital Outcomes and Specialists is open for applications.
 
   You can apply to sell:
@@ -19,6 +23,8 @@ open: |
   - user research participants
 
 pending: &can_not_apply |
+  ### Digital Outcomes and Specialists
+
   Digital Outcomes and Specialists is closed for applications. You can create an account when it is open.
 
   You will be able to apply to sell:
