--- a/requirements-dev.in
+++ b/requirements-dev.in
@@ -1,9 +1,9 @@
 -r requirements.txt
 
-flake8==3.7.7
-hypothesis==4.48.0
-jsonschema==3.0.0
-deepmerge==0.1.0
-mock==2.0.0
-pytest==4.6.3
-PyYAML==5.4
+flake8
+hypothesis
+jsonschema
+deepmerge
+mock
+pytest
+PyYAML
