--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 docopt==0.6.2
 git+https://github.com/madzak/python-json-logger.git@v0.1.11#egg=python-json-logger==v0.1.11
-git+https://github.com/alphagov/digitalmarketplace-content-loader.git@7.22.0#egg=digitalmarketplace-content-loader==7.22.0
-git+https://github.com/alphagov/digitalmarketplace-utils.git@52.10.0#egg=digitalmarketplace-utils==52.10.0
+digitalmarketplace-content-loader
+digitalmarketplace-utils
